fixed overlapping

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .su-modal-wrapper {
